menu structure and activation

--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html lang="en" ng-app="tweetsToSoftware">
+<head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
     <link rel="stylesheet" href="css/main.css">
     <script src="modernizr/modernizr.js"></script>
-  </head>
-  <body>
-    I am the boilerplate
-  </body>
+</head>
+<body>
+    <menu></menu>
+
+    I am the boilerplate {{3 + 3}}
+
+    <script src="angular/angular.js"></script>
+
+
+    <script src="scripts/templates.js"></script>
+    <script src="scripts/app.js"></script>
+
+    <script src="scripts/menuService.js"></script>
+    <script src="scripts/menuDirective.js"></script>
+</body>
 </html>
