--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="modernizr/modernizr.js"></script>
 </head>
-<body>
+<body ng-controller="mainController">
     <menu></menu>
+
+    <button style="position: absolute; bottom: 50px; right: 50px;" ng-click="highlight('Basic')">activate</button>
 
     <script src="angular/angular.js"></script>
 
     <script src="scripts/templates.js"></script>
     <script src="scripts/app.js"></script>
+
+    <script src="scripts/mainController.js"></script>
 
     <script src="scripts/menuService.js"></script>
     <script src="scripts/menuDirective.js"></script>
