--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <body ng-controller="mainController">
     <menu></menu>
 
-    <button style="position: absolute; bottom: 50px; right: 50px;" ng-click="highlight('Basic')">activate</button>
+    <twitter-widget></twitter-widget>
 
     <script src="angular/angular.js"></script>
 
@@ -20,6 +20,9 @@
     <script src="scripts/mainController.js"></script>
 
     <script src="scripts/menuService.js"></script>
+    <script src="scripts/tweetService.js"></script>
+
     <script src="scripts/menuDirective.js"></script>
+    <script src="scripts/twitterWidgetDirective.js"></script>
 </body>
 </html>
