initial idea about presentation

--- a/app/index.html
+++ b/app/index.html
@@ -23,5 +23,7 @@
     <script src="scripts/menuDirective.js"></script>
     <script src="scripts/tweetsWidgetDirective.js"></script>
     <script src="scripts/historyPopupDirective.js"></script>
+    <script src="scripts/notificationPopupDirective.js"></script>
+    <script src="scripts/tweetDirective.js"></script>
 </body>
 </html>
