--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,9 @@
 <body ng-controller="mainController">
     <menu></menu>
 
+    <button style="position:absolute; bottom: 10px; right: 10px;"
+            ng-click="notify()">new tweet</button>
+
     <script src="angular/angular.js"></script>
 
     <script src="scripts/templates.js"></script>
