--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
 <body ng-controller="mainController">
     <menu></menu>
 
+    <tweets-widget></tweets-widget>
+
     <script src="angular/angular.js"></script>
 
     <script src="scripts/templates.js"></script>
@@ -21,9 +23,12 @@
     <script src="scripts/tweetService.js"></script>
 
     <script src="scripts/menuDirective.js"></script>
+
     <script src="scripts/tweetsWidgetDirective.js"></script>
-    <script src="scripts/historyPopupDirective.js"></script>
-    <script src="scripts/notificationPopupDirective.js"></script>
-    <script src="scripts/tweetDirective.js"></script>
+    <script src="scripts/tweetNotificationDirective.js"></script>
+
+    <!--<script src="scripts/historyPopupDirective.js"></script>-->
+    <!--<script src="scripts/notificationPopupDirective.js"></script>-->
+    <!--<script src="scripts/tweetDirective.js"></script>-->
 </body>
 </html>
