popups + various notification fixes

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
         </div>
     </div>
 
+    <script src="jquery/dist/jquery.js"></script>
     <script src="angular/angular.js"></script>
 
     <script src="scripts/templates.js"></script>
@@ -36,8 +37,8 @@
     <script src="scripts/widgetNotificationDirective.js"></script>
     <script src="scripts/menuNotificationDirective.js"></script>
     <script src="scripts/tweetDirective.js"></script>
+    <script src="scripts/menuPopupDirective.js"></script>
 
     <!--<script src="scripts/historyPopupDirective.js"></script>-->
-    <!--<script src="scripts/notificationPopupDirective.js"></script>-->
 </body>
 </html>
