--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
         </div>
     </div>
 
+    <activity-overlay></activity-overlay>
+
     <script src="jquery/dist/jquery.js"></script>
     <script src="angular/angular.js"></script>
 
@@ -38,6 +40,7 @@
     <script src="scripts/menuNotificationDirective.js"></script>
     <script src="scripts/tweetDirective.js"></script>
     <script src="scripts/menuPopupDirective.js"></script>
+    <script src="scripts/activityOverlayDirective.js"></script>
 
     <!--<script src="scripts/historyPopupDirective.js"></script>-->
 </body>
