basic mock for users filter

--- a/app/index.html
+++ b/app/index.html
@@ -50,5 +50,6 @@
     <script src="scripts/menuPopupDirective.js"></script>
 
     <script src="scripts/activityPanelDirective.js"></script>
+    <script src="scripts/authorsFilterDirective.js"></script>
 </body>
 </html>
