--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <div class="toolbar">
         <div class="l-split">
             <div class="l-split__right">
-                <tweets-widget></tweets-widget>
+                <tweets-widget ng-show="!filters.active"></tweets-widget>
             </div>
 
             <div class="l-split__left">
@@ -23,12 +23,13 @@
         </div>
     </div>
 
-    <activity-panel></activity-panel>
+    <activity-panel ng-show="filters.active"></activity-panel>
 
     <script src="jquery/dist/jquery.js"></script>
     <script src="angular/angular.js"></script>
     <script src="moment/moment.js"></script>
     <script src="angular-moment/angular-moment.js"></script>
+    <script src="d3/d3.js"></script>
 
     <script src="scripts/templates.js"></script>
     <script src="scripts/app.js"></script>
@@ -51,5 +52,6 @@
 
     <script src="scripts/activityPanelDirective.js"></script>
     <script src="scripts/authorsFilterDirective.js"></script>
+    <script src="scripts/timelineDirective.js"></script>
 </body>
 </html>
