--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
     <script src="scripts/menuService.js"></script>
     <script src="scripts/notificationService.js"></script>
     <script src="scripts/tweetService.js"></script>
+    <script src="scripts/activityService.js"></script>
 
     <script src="scripts/menuDirective.js"></script>
     <script src="scripts/tweetDirective.js"></script>
