--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
     <script src="scripts/menuService.js"></script>
     <script src="scripts/notificationService.js"></script>
     <script src="scripts/dataService.js"></script>
+    <script src="scripts/authorService.js"></script>
 
     <script src="scripts/menuDirective.js"></script>
     <script src="scripts/tweetDirective.js"></script>
