--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,9 @@
     <title>Document</title>
     <meta name="viewport" content="width=device-width, user-scalable=no"/>
     <link rel="stylesheet" href="css/main.css">
+    <!-- build:[src] scripts/ -->
     <script src="modernizr/modernizr.js"></script>
+    <!-- /build -->
 </head>
 <body ng-controller="mainController">
     <div class="topbar">
@@ -26,12 +28,15 @@
 
     <activity-panel></activity-panel>
 
+    <!-- build:js scripts/dependencies.concat.js -->
     <script src="jquery/dist/jquery.js"></script>
     <script src="angular/angular.js"></script>
     <script src="moment/moment.js"></script>
     <script src="angular-moment/angular-moment.js"></script>
     <script src="d3/d3.js"></script>
+    <!-- /build -->
 
+    <!-- build:js scripts/app.concat.js -->
     <script src="scripts/templates.js"></script>
     <script src="scripts/app.js"></script>
 
@@ -54,5 +59,6 @@
     <script src="scripts/activityPanelDirective.js"></script>
     <script src="scripts/authorsFilterDirective.js"></script>
     <script src="scripts/timelineDirective.js"></script>
+    <!-- /build -->
 </body>
 </html>
