--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
     <!-- /build -->
 
     <!-- build:js scripts/app.concat.js -->
+    <script src="scripts/decimalAdjust.js"></script>
     <script src="scripts/templates.js"></script>
     <script src="scripts/app.js"></script>
 
