started working on toolbars

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
         <menu></menu>
     </div>
 
+    <tools-toolbar></tools-toolbar>
+
     <activity-panel></activity-panel>
 
     <!-- build:js scripts/dependencies.concat.js -->
@@ -38,6 +40,7 @@
     <script src="scripts/tweetService.js"></script>
     <script src="scripts/authorService.js"></script>
     <script src="scripts/activityService.js"></script>
+    <script src="scripts/toolbarService.js"></script>
 
     <script src="scripts/menuDirective.js"></script>
     <script src="scripts/tweetDirective.js"></script>
@@ -46,6 +49,7 @@
     <script src="scripts/activityPanelDirective.js"></script>
     <script src="scripts/authorsFilterDirective.js"></script>
     <script src="scripts/timelineDirective.js"></script>
+    <script src="scripts/toolsToolbarDirective.js"></script>
     <!-- /build -->
 </body>
 </html>
