--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,8 @@
         <menu></menu>
     </div>
 
-    <tools-toolbar></tools-toolbar>
+    <toolbar></toolbar>
+    <panelbar></panelbar>
 
     <activity-panel></activity-panel>
 
@@ -51,6 +52,8 @@
     <script src="scripts/timelineDirective.js"></script>
     <script src="scripts/toolbarDirective.js"></script>
     <script src="scripts/toolbarItemDirective.js"></script>
+    <script src="scripts/panelbarDirective.js"></script>
+    <script src="scripts/panelDirective.js"></script>
     <!-- /build -->
 </body>
 </html>
