menu, panel, and toolbox

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <toolbar></toolbar>
     <panelbar></panelbar>
 
-    <activity-panel></activity-panel>
+    <!--<activity-panel></activity-panel>-->
 
     <!-- build:js scripts/dependencies.concat.js -->
     <script src="jquery/dist/jquery.js"></script>
@@ -41,7 +41,6 @@
     <script src="scripts/tweetService.js"></script>
     <script src="scripts/authorService.js"></script>
     <script src="scripts/activityService.js"></script>
-    <script src="scripts/toolbarService.js"></script>
 
     <script src="scripts/menuDirective.js"></script>
     <script src="scripts/tweetDirective.js"></script>
