migrated from grunt to gulp; cleaned up the mess

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <toolbar></toolbar>
     <panelbar></panelbar>
 
+
     <!--<activity-panel></activity-panel>-->
 
     <!-- build:js scripts/dependencies.concat.js -->
@@ -25,11 +26,11 @@
     <script src="moment/moment.js"></script>
     <script src="angular-moment/angular-moment.js"></script>
     <script src="d3/d3.js"></script>
+    <script src="scripts/utils/decimalAdjust.js"></script>
     <!-- /build -->
 
     <!-- build:js scripts/app.concat.js -->
-    <script src="scripts/decimalAdjust.js"></script>
-    <script src="scripts/templates.js"></script>
+    <script src="scripts/templates/templates.js"></script>
     <script src="scripts/app.js"></script>
 
     <script src="scripts/notificationValue.js"></script>
