--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <script src="angular/angular.js"></script>
     <script src="moment/moment.js"></script>
     <script src="angular-moment/angular-moment.js"></script>
+    <script src="angular-truncate/src/truncate.js"></script>
     <script src="d3/d3.js"></script>
     <script src="scripts/utils/decimalAdjust.js"></script>
     <!-- /build -->
@@ -51,6 +52,7 @@
     <script src="scripts/toolbarItemDirective.js"></script>
     <script src="scripts/panelbarDirective.js"></script>
     <script src="scripts/panelDirective.js"></script>
+    <script src="scripts/tweetsPopupDirective.js"></script>
     <!-- /build -->
 </body>
 </html>
