--- a/app/index.html
+++ b/app/index.html
@@ -9,16 +9,13 @@
     <script src="modernizr/modernizr.js"></script>
     <!-- /build -->
 </head>
-<body ng-controller="mainController">
-    <div class="topbar">
-        <menu></menu>
-    </div>
+<body>
+    <menu></menu>
 
     <toolbar></toolbar>
     <panelbar></panelbar>
 
-
-    <!--<activity-panel></activity-panel>-->
+    <activity></activity>
 
     <!-- build:js scripts/dependencies.concat.js -->
     <script src="jquery/dist/jquery.js"></script>
@@ -34,25 +31,19 @@
     <script src="scripts/templates/templates.js"></script>
     <script src="scripts/app.js"></script>
 
-    <script src="scripts/mainController.js"></script>
-
-    <script src="scripts/filterService.js"></script>
     <script src="scripts/menuService.js"></script>
     <script src="scripts/tweetService.js"></script>
-    <script src="scripts/authorService.js"></script>
-    <script src="scripts/activityService.js"></script>
 
     <script src="scripts/menuDirective.js"></script>
     <script src="scripts/tweetDirective.js"></script>
-    <script src="scripts/authorDirective.js"></script>
-    <script src="scripts/activityPanelDirective.js"></script>
-    <script src="scripts/authorsFilterDirective.js"></script>
-    <script src="scripts/timelineDirective.js"></script>
     <script src="scripts/toolbarDirective.js"></script>
     <script src="scripts/toolbarItemDirective.js"></script>
     <script src="scripts/panelbarDirective.js"></script>
     <script src="scripts/panelDirective.js"></script>
     <script src="scripts/tweetsPopupDirective.js"></script>
+    <script src="scripts/activityDirective.js"></script>
+    <script src="scripts/timelineDirective.js"></script>
+    <script src="scripts/activeTweetDirective.js"></script>
     <!-- /build -->
 </body>
 </html>
