--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
 
     <script src="scripts/menuService.js"></script>
     <script src="scripts/tweetService.js"></script>
+    <script src="scripts/filterService.js"></script>
 
     <script src="scripts/menuDirective.js"></script>
     <script src="scripts/tweetDirective.js"></script>
