refactored & fixed interaction for the menu

--- a/app/index.html
+++ b/app/index.html
@@ -12,10 +12,11 @@
 <body>
     <menu></menu>
 
-    <toolbar></toolbar>
-    <panelbar></panelbar>
+    <!--<toolbar></toolbar>-->
+    <!--<panelbar></panelbar>-->
 
-    <activity></activity>
+    <!--<activity></activity>-->
+    <tweet-list></tweet-list>
 
     <!-- build:js scripts/dependencies.js -->
     <script src="jquery/dist/jquery.js"></script>
@@ -45,9 +46,9 @@
     <script src="scripts/panelbarDirective.js"></script>
     <script src="scripts/panelDirective.js"></script>
     <script src="scripts/tweetsPopupDirective.js"></script>
-    <script src="scripts/activityDirective.js"></script>
-    <script src="scripts/timelineDirective.js"></script>
-    <script src="scripts/activeTweetDirective.js"></script>
+    <!--<script src="scripts/activityDirective.js"></script>-->
+    <!--<script src="scripts/timelineDirective.js"></script>-->
+    <!--<script src="scripts/activeTweetDirective.js"></script>-->
     <!-- /build -->
 </body>
 </html>
