some progress on toolbar

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 <body>
     <menu></menu>
 
-    <!--<toolbar></toolbar>-->
+    <toolbar></toolbar>
     <!--<panelbar></panelbar>-->
 
     <!--<activity></activity>-->
@@ -42,7 +42,7 @@
     <script src="scripts/menuDirective.js"></script>
     <script src="scripts/tweetDirective.js"></script>
     <script src="scripts/toolbarDirective.js"></script>
-    <script src="scripts/toolbarItemDirective.js"></script>
+    <script src="scripts/toolDirective.js"></script>
     <script src="scripts/panelbarDirective.js"></script>
     <script src="scripts/panelDirective.js"></script>
     <script src="scripts/tweetsPopupDirective.js"></script>
