--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <menu></menu>
 
     <toolbar></toolbar>
-    <!--<panelbar></panelbar>-->
+    <panelbar></panelbar>
 
     <!--<activity></activity>-->
     <tweet-list></tweet-list>
@@ -42,7 +42,6 @@
     <script src="scripts/menuDirective.js"></script>
     <script src="scripts/tweetDirective.js"></script>
     <script src="scripts/toolbarDirective.js"></script>
-    <script src="scripts/toolDirective.js"></script>
     <script src="scripts/panelbarDirective.js"></script>
     <script src="scripts/panelDirective.js"></script>
     <script src="scripts/tweetsPopupDirective.js"></script>
