--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <menu></menu>
 
     <toolbar></toolbar>
-    <panelbar></panelbar>
+    <!--<panelbar></panelbar>-->
 
     <!--<activity></activity>-->
     <tweet-list></tweet-list>
