--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <menu></menu>
 
     <toolbar></toolbar>
-    <!--<panelbar></panelbar>-->
+    <panelbar></panelbar>
 
     <!--<activity></activity>-->
     <tweet-list></tweet-list>
@@ -40,11 +40,10 @@
     <script src="scripts/filterService.js"></script>
 
     <script src="scripts/menuDirective.js"></script>
-    <script src="scripts/tweetDirective.js"></script>
     <script src="scripts/toolbarDirective.js"></script>
     <script src="scripts/panelbarDirective.js"></script>
-    <script src="scripts/panelDirective.js"></script>
-    <script src="scripts/tweetsPopupDirective.js"></script>
+    <script src="scripts/tweetDirective.js"></script>
+    <!--<script src="scripts/tweetsPopupDirective.js"></script>-->
     <!--<script src="scripts/activityDirective.js"></script>-->
     <!--<script src="scripts/timelineDirective.js"></script>-->
     <!--<script src="scripts/activeTweetDirective.js"></script>-->
