tweet & filter services, tweet list directive

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
     <script src="scripts/menuDirective.js"></script>
     <script src="scripts/toolbarDirective.js"></script>
     <script src="scripts/panelbarDirective.js"></script>
-    <script src="scripts/tweetDirective.js"></script>
+    <script src="scripts/tweetListDirective.js"></script>
     <!--<script src="scripts/tweetsPopupDirective.js"></script>-->
     <!--<script src="scripts/activityDirective.js"></script>-->
     <!--<script src="scripts/timelineDirective.js"></script>-->
