styling for tweets

--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,22 @@
 <!doctype html>
-<html lang="en" ng-app="tweetsToSoftware">
-<head>
+<html lang="en"
+      ng-app="tweetsToSoftware">
+  <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no"/>
-    <link rel="stylesheet" href="css/main.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no"/>
+    <link rel="stylesheet"
+          href="css/main.css">
     <!-- build:[src] scripts/ -->
     <script src="modernizr/modernizr.js"></script>
     <!-- /build -->
-</head>
-<body>
-    <menu></menu>
+  </head>
+  <body>
+    <!--<menu></menu>-->
 
-    <toolbar></toolbar>
-    <panelbar></panelbar>
+    <!--<toolbar></toolbar>-->
+    <!--<panelbar></panelbar>-->
 
     <!--<activity></activity>-->
     <tweet-list></tweet-list>
@@ -43,10 +46,11 @@
     <script src="scripts/toolbarDirective.js"></script>
     <script src="scripts/panelbarDirective.js"></script>
     <script src="scripts/tweetListDirective.js"></script>
+    <script src="scripts/tweetDirective.js"></script>
     <!--<script src="scripts/tweetsPopupDirective.js"></script>-->
     <!--<script src="scripts/activityDirective.js"></script>-->
     <!--<script src="scripts/timelineDirective.js"></script>-->
     <!--<script src="scripts/activeTweetDirective.js"></script>-->
     <!-- /build -->
-</body>
+  </body>
 </html>
