tweet-list directive & styling fixes

--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,10 @@
     <!-- /build -->
   </head>
   <body>
-    <!--<menu></menu>-->
+    <menu></menu>
 
-    <!--<toolbar></toolbar>-->
-    <!--<panelbar></panelbar>-->
+    <toolbar></toolbar>
+    <panelbar></panelbar>
 
     <!--<activity></activity>-->
     <tweet-list></tweet-list>
