--- a/app/index.html
+++ b/app/index.html
@@ -13,29 +13,44 @@
   <!-- /build -->
 </head>
 <body ng-controller="mainController">
-  <menu menu="menu"
-        on-item-hover="itemHoverCallback"
-        on-item-click="itemClickCallback"
-        on-item-activate="itemActivateCallback"></menu>
+  <top-menu menu="menu"
+            on-item-activate="activateItemHandler"
+            on-item-hover="itemHoverHandler"
+            on-item-leave="itemLeaveHandler"
+            on-root-item-click="rootItemClickHandler"
+            on-root-item-hover="rootItemHoverHandler"
+            on-root-item-leave="rootItemLeaveHandler"></top-menu>
 
   <toolbar menu="toolbar"
-           on-item-hover="itemHoverCallback"
-           on-item-click="itemClickCallback"
-           on-item-activate="itemActivateCallback"></toolbar>
+           on-item-activate="activateItemHandler"
+           on-item-hover="itemHoverHandler"
+           on-item-leave="itemLeaveHandler"
+           on-root-item-click="rootItemClickHandler"
+           on-root-item-hover="rootItemHoverHandler"
+           on-root-item-leave="rootItemLeaveHandler"></toolbar>
 
   <panelbar menu="panelbar"
-            on-item-hover="itemHoverCallback"
-            on-item-click="itemClickCallback"
-            on-item-activate="itemActivateCallback"></panelbar>
+            on-item-activate="activateItemHandler"
+            on-item-hover="itemHoverHandler"
+            on-item-leave="itemLeaveHandler"
+            on-root-item-click="rootItemClickHandler"
+            on-root-item-hover="rootItemHoverHandler"
+            on-root-item-leave="rootItemLeaveHandler"></panelbar>
 
-  <div ng-click="hideMenus()">
+  <div ng-click="reset()">
     <div class="app-body">
       <div class="app-body__timeline">
         <timeline></timeline>
       </div>
 
       <div class="app-body__tweet-list">
-        <tweet-list></tweet-list>
+        <!--<tweet-list tweets="tweets"-->
+                    <!--active-tweet-id="activeTweetId"-->
+                    <!--active-item="activeItem"-->
+                    <!--active-menu="activeMenu"-->
+                    <!--on-item-click="itemClickCallback"-->
+                    <!--on-item-reset="itemResetCallback"-->
+                    <!--on-tweet-activate="tweetActivateCallback"></tweet-list>-->
       </div>
     </div>
   </div>
