--- a/app/index.html
+++ b/app/index.html
@@ -37,14 +37,15 @@
             root-item-hover-callback="rootItemHoverHandler"
             root-item-leave-callback="rootItemLeaveHandler"></panelbar>
 
-  <div ng-click="reset()">
-    <div class="app-body">
+  <div class="app-body" ng-click="reset()">
+    <div class="app-body__wrapper">
       <div class="app-body__timeline">
         <timeline></timeline>
       </div>
 
       <div class="app-body__tweet-list">
         <tweet-list tweets="tweets"
+                    active-tweet-id="activeTweetId"
                     active-item="activeItem"
                     active-menu="activeMenu"
                     deactivate-callback="deactivateItem"></tweet-list>
