some work on timeline and tweets

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
   <div class="app-body" ng-click="reset()">
     <div class="app-body__wrapper">
       <div class="app-body__timeline">
-        <timeline></timeline>
+        <timeline tweets="tweets"></timeline>
       </div>
 
       <div class="app-body__tweet-list">
