--- a/app/index.html
+++ b/app/index.html
@@ -12,48 +12,15 @@
   <script src="modernizr/modernizr.js"></script>
   <!-- /build -->
 </head>
-<body ng-controller="mainController">
-  <top-menu menu="menu"
-            item-activate-callback="activateItem"
-            item-hover-callback="itemHoverHandler"
-            item-leave-callback="itemLeaveHandler"
-            root-item-click-callback="rootItemClickHandler"
-            root-item-hover-callback="rootItemHoverHandler"
-            root-item-leave-callback="rootItemLeaveHandler"></top-menu>
-
-  <toolbar menu="toolbar"
-           item-activate-callback="activateItem"
-           item-hover-callback="itemHoverHandler"
-           item-leave-callback="itemLeaveHandler"
-           root-item-click-callback="rootItemClickHandler"
-           root-item-hover-callback="rootItemHoverHandler"
-           root-item-leave-callback="rootItemLeaveHandler"></toolbar>
-
-  <panelbar menu="panelbar"
-            item-activate-callback="activateItem"
-            item-hover-callback="itemHoverHandler"
-            item-leave-callback="itemLeaveHandler"
-            root-item-click-callback="rootItemClickHandler"
-            root-item-hover-callback="rootItemHoverHandler"
-            root-item-leave-callback="rootItemLeaveHandler"></panelbar>
-
-  <div class="app-body">
-    <div class="app-body__wrapper">
-      <div class="app-body__timeline">
-        <timeline tweets="tweets"></timeline>
-      </div>
-
-      <div class="app-body__tweet-list">
-        <tweet-list tweets="tweets"></tweet-list>
-      </div>
-    </div>
-  </div>
+<body>
+  <div ng-view></div>
 
   <!-- build:js scripts/dependencies.js -->
   <script src="jquery/dist/jquery.js"></script>
   <script src="angular/angular.js"></script>
   <script src="moment/moment.js"></script>
   <script src="angular-moment/angular-moment.js"></script>
+  <script src="angular-route/angular-route.js"></script>
   <script src="angular-truncate/src/truncate.js"></script>
   <script src="d3/d3.js"></script>
   <!-- /build -->
@@ -67,6 +34,7 @@
   <script src="scripts/utils/timeTransform.js"></script>
   <script src="scripts/app.js"></script>
   <script src="scripts/mainController.js"></script>
+  <script src="scripts/adminController.js"></script>
 
   <script src="scripts/menuService.js"></script>
   <script src="scripts/tweetService.js"></script>
