connected tweet creation to server

--- a/app/admin.html
+++ b/app/admin.html
@@ -10,12 +10,12 @@
 
     <div class="admin-panel__section">
         <label for="tweetId">Tweet ID: </label>
-        <input id="tweetId" type="text" />
+        <input id="tweetId" type="text" ng-model="tweetId">
     </div>
 
     <div class="admin-panel__section">
         <label for="thumbLink">Thumbnail: </label>
-        <input id="thumbLink" type="text" />
+        <input id="thumbLink" type="text" ng-model="previewImageUrl"/>
     </div>
 
     <div class="grid grid--full grid--middle admin-panel__section">
