final steps for deployment

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,12 @@
   <script src="scripts/templates/templates.js"></script>
   <!-- /build -->
 
+  <!-- build:remove -->
+  <script>
+    DEVELOPMENT = true;
+  </script>
+  <!-- /build -->
+
   <!-- build:js scripts/app.js -->
   <script src="scripts/utils/decimalAdjust.js"></script>
   <script src="scripts/utils/timeTransform.js"></script>
