more deployment fixes

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
   <script src="angular-moment/angular-moment.js"></script>
   <script src="angular-route/angular-route.js"></script>
   <script src="angular-truncate/src/truncate.js"></script>
+  <script src="angular-sanitize/angular-sanitize.js"></script>
   <script src="d3/d3.js"></script>
   <!-- /build -->
 
@@ -38,6 +39,8 @@
   <!-- build:js scripts/app.js -->
   <script src="scripts/utils/decimalAdjust.js"></script>
   <script src="scripts/utils/timeTransform.js"></script>
+  <script src="scripts/utils/linkify.min.js"></script>
+  <script src="scripts/utils/linkify-string.js"></script>
   <script src="scripts/app.js"></script>
   <script src="scripts/mainController.js"></script>
   <script src="scripts/adminController.js"></script>
