--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
   <script src="scripts/menuService.js"></script>
   <script src="scripts/tweetService.js"></script>
   <script src="scripts/filterService.js"></script>
+  <script src="scripts/loggerService.js"></script>
 
   <script src="scripts/menuDirective.js"></script>
   <script src="scripts/toolbarDirective.js"></script>
