--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
   <script src="scripts/app.js"></script>
   <script src="scripts/mainController.js"></script>
   <script src="scripts/adminController.js"></script>
+  <script src="scripts/journalController.js"></script>
 
   <script src="scripts/menuService.js"></script>
   <script src="scripts/tweetService.js"></script>
