added locking tweet ids

--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
   <script src="scripts/tweetService.js"></script>
   <script src="scripts/filterService.js"></script>
   <script src="scripts/loggerService.js"></script>
+  <script src="scripts/lockService.js"></script>
 
   <script src="scripts/menuDirective.js"></script>
   <script src="scripts/toolbarDirective.js"></script>
